--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -16,7 +16,7 @@
  * -->
  */
 
-@use 'src/bulma-overwrite/bulma-spacing';
+@use 'src/variables-helpers';
 
 @use 'src/atomic-design-system/00-token/t.spacing' as spacing;
 @use 'src/atomic-design-system/00-token/t.color' as color;
