--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -32,7 +32,7 @@
   @extend .py-5_3;
 
   border-top: var(--border-weight-1) solid;
-  border-color: var(--color-primary--600) !important;
+  border-color: var(--kyanite-primary);
 
   > .id {
     @extend .t-gap-5;
@@ -49,7 +49,7 @@
 
       font-size: var(--font-size-24);
       font-weight: var(--kyanite-weight-semibold);
-      color: var(--color-grey--900) !important;
+      color: var(--kyanite-grey-darker) !important;
     }
 
     .role {
@@ -57,7 +57,7 @@
       @extend .mt-1_2;
 
       font-weight: var(--kyanite-weight-semibold);
-      color: var(--color-primary--600) !important;
+      color: var(--kyanite-primary);
     }
   }
 
@@ -65,7 +65,7 @@
     @extend .mt-5_3;
     @extend .mb-0;
 
-    color: var(--color-grey--800) !important;
+    color: var(--kyanite-grey-30) !important;
   }
 
   // will be enabled with TODO https://teamds.atlassian.net/browse/WSIO-176
