--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -31,48 +31,80 @@
   @extend .px-6_2;
   @extend .py-5_3;
 
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
   border-top: var(--border-weight-1) solid;
   border-color: var(--color-primary--600) !important;
 
-  > .id {
-    @extend .t-gap-5;
+  .author-bio-block {
 
-    display: flex;
-    align-items: center;
+    margin-bottom: 10px;
 
-    .photo {
-      @extend .m-0;
+    &.author-info {
+
+      display: block;
+
+      > .id {
+        @extend .t-gap-5;
+
+        display: flex;
+        align-items: center;
+
+        .photo {
+          @extend .m-0;
+
+          .image {
+            margin-bottom: 0 !important;
+          }
+        }
+
+        .name {
+          @extend .m-0;
+
+          font-size: var(--font-size-24);
+          font-weight: var(--font-weight-600);
+          color: var(--color-grey--900) !important;
+        }
+
+        .role {
+          @extend .m-0;
+          @extend .mt-1_2;
+
+          font-weight: var(--font-weight-600);
+          color: var(--color-primary--600) !important;
+        }
+      }
+
+      > .description {
+        @extend .mt-5_3;
+        @extend .mb-0;
+
+        color: var(--color-grey--800) !important;
+      }
+
+      // will be enabled with TODO https://teamds.atlassian.net/browse/WSIO-176
+      > .link {
+        @extend .a-link;
+
+        @extend .mt-5_3;
+        font-weight: var(--font-weight-500);
+      }
     }
 
-    .name {
-      @extend .m-0;
+    //  social media buttons on one line
+    &.social-media {
 
-      font-size: var(--font-size-24);
-      font-weight: var(--font-weight-600);
-      color: var(--color-grey--900) !important;
+      > * {
+        margin-left: auto;
+        margin-bottom: auto;
+      }
+
+      //  edit mode placeholder fix
+      > .ws-placeholder {
+        min-width: 125px;
+      }
     }
-
-    .role {
-      @extend .m-0;
-      @extend .mt-1_2;
-
-      font-weight: var(--font-weight-600);
-      color: var(--color-primary--600) !important;
-    }
-  }
-
-  > .description {
-    @extend .mt-5_3;
-    @extend .mb-0;
-
-    color: var(--color-grey--800) !important;
-  }
-
-  // will be enabled with TODO https://teamds.atlassian.net/browse/WSIO-176
-  > .link {
-    @extend .a-link;
-
-    @extend .mt-5_3;
-    font-weight: var(--font-weight-500);
   }
 }
