--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -29,67 +29,55 @@
   @extend .px-6_2;
   @extend .py-5_3;
 
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-
   border-top: var(--border-weight-1) solid;
   border-color: var(--kyanite-primary);
 
   .author-bio-block {
 
+    display: block;
     margin-bottom: 10px;
 
-    &.author-info {
-
-      display: block;
-
-      > .id {
-        @extend .t-gap-5;
-
-        display: flex;
-        align-items: center;
-
-        .photo {
-          @extend .m-0;
-
-          .image {
-            margin-bottom: 0 !important;
-          }
-        }
-
-        .name {
-          @extend .m-0;
-
-        font-size: var(--font-size-24);
-        font-weight: var(--kyanite-weight-semibold);
-        color: var(--kyanite-gray-15) !important;
+    .author-short-info {
+      @extend .t-gap-5;
     }
 
-        .role {
-          @extend .m-0;
-          @extend .mt-1_2;
+    .author-photo {
+      @extend .m-0;
 
-        font-weight: var(--kyanite-weight-semibold);
-        color: var(--kyanite-primary);
+      .image {
+        margin-bottom: 0 !important;
       }
     }
 
-      > .description {
-        @extend .mt-5_3;
-        @extend .mb-0;
+    .author-name {
+      @extend .m-0;
+
+      font-size: var(--font-size-24);
+      font-weight: var(--kyanite-weight-semibold);
+      color: var(--kyanite-gray-15) !important;
+    }
+
+    .author-role {
+      @extend .m-0;
+      @extend .mt-1_2;
+
+      font-weight: var(--kyanite-weight-semibold);
+      color: var(--kyanite-primary);
+    }
+
+    .author-description {
+      @extend .mt-5_3;
+      @extend .mb-0;
 
       color: var(--kyanite-gray-30) !important;
     }
 
-      // will be enabled with TODO https://teamds.atlassian.net/browse/WSIO-176
-      > .link {
-        @extend .a-link;
+    .link {
+      @extend .a-link;
 
       @extend .mt-5_3;
       font-weight: var(--kyanite-weight-medium);
     }
-  }
 
     //  social media buttons on one line
     &.social-media {
