--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -21,6 +21,7 @@
  @use 'src/atomic-design-system/00-token/t.spacing' as spacing;
  @use 'src/atomic-design-system/00-token/t.border' as border;
  @use 'src/atomic-design-system/01-atom/a.link' as link;
+ @use 'src/atomic-design-system/01-atom/a.author-photo' as author-photo;
  @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as
    animated-link;
  
@@ -42,8 +43,8 @@
       align-items: center;
       gap: 1.35rem;
       .author-photo {
+        @include author-photo.a-author-photo;
         .image {
-          margin-bottom: 0 !important;
           img {
             height: 100%;
             width: 100%;
