--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-author-bio/m.article-author-bio.scss
@@ -21,6 +21,7 @@
  @use 'src/atomic-design-system/00-token/t.spacing' as spacing;
  @use 'src/atomic-design-system/00-token/t.border' as border;
  @use 'src/atomic-design-system/01-atom/a.link' as link;
+ @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
  @use 'src/atomic-design-system/01-atom/a.author-photo' as author-photo;
  @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as
    animated-link;
@@ -37,6 +38,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
+    justify-content: space-between;
     .author-bio {
       display: flex;
       flex-wrap: wrap;
@@ -67,6 +69,7 @@
       .author-description {
         @extend .mb-0;
         color: var(--kyanite-gray-30) !important;
+        width: 100%;
       }
      }
      .author-social-media {
